--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Doogle</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
   <%- include('partials/head'); %>
-  <h1>Hi there</h1>
+<body>
+  <%- include('partials/header'); %>
   
 </body>
 </html>
