--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,8 +2,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../public/styles/base.css">
-  <link rel="stylesheet" href="../public/styles/layout.css">
-  <link rel="stylesheet" href="../public/styles/module.css">
+  <link rel="stylesheet" href="../styles/base.css">
+  <link rel="stylesheet" href="../styles/layout.css">
+  <link rel="stylesheet" href="../styles/module.css">
   <title>Document</title>
 </head>
