--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,3 +1,8 @@
 body {
-  background-color: aqua;
+  background-color: #f1f1f1;
+  font-family: 'Graduate', cursive;
+}
+
+header {
+  background-color: #2C3539;
 }
