--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,11 @@
 <header>
+  <div class="logo">MED <i class="watermellon fa fa-medkit"></i>
+    WORDS</div>
   <nav>
-    <section class="logo">
-      <h1>MedWords</h1>
-    </section>
-    <section class="links">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="">About</a></li>
-      </ul>
-    </section>
+    <ul>
+      <li><a href="#" class="active">Home</a></li>
+      <li><a href="#">About us</a></li>
+    </ul>
   </nav>
+  <div class="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></div>
 </header>
