--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,9 @@
   <%- include('partials/head'); %>
 <body>
   <%- include('partials/header'); %>
-  
+  <main class="site-content">
+    
+  </main>  
+  <%- include('partials/footer'); %>
 </body>
 </html>
