--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,7 @@
 <header>
   <div class="logo">MED <i class="watermellon fa fa-medkit"></i>
-    WORDS</div>
+    WORDS
+  </div>
   <nav>
     <ul>
       <li><a href="#" class="active">Home</a></li>
