--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <body>
   <%- include('partials/header'); %>
   <main class="site-content">
-    
+    <%= patients[0].first_name %>
   </main>  
   <%- include('partials/footer'); %>
 </body>
