--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,5 +8,6 @@
       <li><a href="#">About us</a></li>
     </ul>
   </nav>
-  <div class="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></div>
+  <div class="menu-toggle menu-toggle-one"><i class="fa fa-bars" aria-hidden="true"></i></div>
+  <div class="menu-toggle menu-toggle-two"><i class="fa fa-times" aria-hidden="true"></i></div>
 </header>
