--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,31 @@
 <body>
   <%- include('partials/header'); %>
   <main class="site-content">
-    <%= patients[0].first_name %>
+    <div>
+        <h2>Add A New Patient</h2>
+        <form class=""  method="POST" action="/patient">
+            <label for="">First Name<input id="" type="text" placeholder="" required></label>
+            <label for="">Last Name<input id="" type="text" placeholder="" required></label>
+            <button>Submit</button>
+        </form>
+    </div>
+    <div>
+      <h2>Patients</h2>
+      <ul>          
+        <li>
+          <span>ID</span>
+          <span>Last</span>
+          <span>First</span>
+        </li>
+        <% patients.forEach( patient => {  %>
+          <li>
+            <span><%= patient.id %></span>
+            <span><%= patient.last_name %></span>
+            <span><%= patient.first_name %></span>
+          </li>
+        <% }) %>
+      </ul>
+  </div>
   </main>  
   <%- include('partials/footer'); %>
 </body>
