--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,8 +4,8 @@
   </div>
   <nav>
     <ul>
-      <li><a href="#" class="active">Home</a></li>
-      <li><a href="#">About us</a></li>
+      <li><a href="#" class="active">home</a></li>
+      <li><a href="#">about us</a></li>
     </ul>
   </nav>
   <div class="menu-toggle menu-toggle-one"><i class="fa fa-bars" aria-hidden="true"></i></div>
