not really sure what was change but committing before I pull down

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,27 +4,23 @@
 <body>
   <%- include('partials/header'); %>
   <main class="site-content">
-      <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for patient names..">
-      <ul id="patient-list">
-        <li><a href="#">Adele <i class="fa fa-user-plus red"></i></a></li>
-        <li><a href="#">Agnes <i class="fa fa-user-plus red"></i></a></li>
-      
-        <li><a href="#">Billy <i class="fa fa-user-plus red"></i></a></li>
-        <li><a href="#">Bob <i class="fa fa-user-plus red"></i></a></li>
-      
-        <li><a href="#">Calvin <i class="fa fa-user-plus red"></i></a></li>
-        <li><a href="#">Christina <i class="fa fa-user-plus red"></i></a></li>
-        <li><a href="#">Cindy <i class="fa fa-user-plus red"></i></a></li>
-        <li><a href="#">zdele <i class="fa fa-user-plus red"></i></a></li>
-        <li><a href="#">Xgnes <i class="fa fa-user-plus red"></i></a></li>
-      
-        <li><a href="#">Yilly <i class="fa fa-user-plus red"></i></a></li>
-        <li><a href="#">Oob <i class="fa fa-user-plus red"></i></a></li>
-      
-        <li><a href="#">Palvin <i class="fa fa-user-plus red"></i></a></li>
-        <li><a href="#">Qhristina <i class="fa fa-user-plus red"></i></a></li>
-        <li><a href="#">Rindy <i class="fa fa-user-plus red"></i></a></li>
-      </ul>
+    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for patient names..">
+    <ul id="patient-list">
+      <li><a href="#">Adele</i></a></li>
+      <li><a href="#">Agnes</i></a></li>
+      <li><a href="#">Billy</i></a></li>
+      <li><a href="#">Bob</i></a></li>
+      <li><a href="#">Calvin</i></a></li>
+      <li><a href="#">Christina</i></a></li>
+      <li><a href="#">Cindy</i></a></li>
+      <li><a href="#">zdele</i></a></li>
+      <li><a href="#">Xgnes</i></a></li>
+      <li><a href="#">Yilly</i></a></li>
+      <li><a href="#">Oob</i></a></li>
+      <li><a href="#">Palvin</i></a></li>
+      <li><a href="#">Qhristina</i></a></li>
+      <li><a href="#">Rindy</i></a></li>
+    </ul>
   </main>  
   <%- include('partials/footer'); %>
 </body>
