--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -3,7 +3,9 @@
   <%- include('../partials/head'); %>
 <body>
   <%- include('../partials/header'); %>
-  <p><%= message %></p>
+  <main class="sticky-footer">
+    <p><%= message %></p>      
+  </main>
+  <%- include('../partials/footer'); %>
 </body>
-<%- include('../partials/footer'); %>
 </html>
