Completed query for patient records

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,9 @@
         </form>
     </div>
     <div>
+      <form action="/patient/1/analyze" method="POST">
+        <button>Hit me</button>
+      </form>
       <h2>Patients</h2>
       <ul>          
         <li>
