form submit for new patient done

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,8 @@
     <div>
         <h2>Add A New Patient</h2>
         <form class=""  method="POST" action="/patient">
-            <label for="">First Name<input id="" type="text" placeholder="" required></label>
-            <label for="">Last Name<input id="" type="text" placeholder="" required></label>
+            <label for="">First Name<input id="" type="text" placeholder="" name="first_name" required></label>
+            <label for="">Last Name<input id="" type="text" placeholder="" name="last_name" required></label>
             <button>Submit</button>
         </form>
     </div>
