add new record form done

--- a/views/pages/patient.ejs
+++ b/views/pages/patient.ejs
@@ -20,9 +20,9 @@
 <div>
     <h2>Add A New Patient Record</h2>
     <form class=""  method="POST" action="/record">
-        <label for="">Record Title<input id="" type="text" placeholder="" required></label>
-        <label for="">Description<input id="" type="text" placeholder="" required></label>
-        <label for="">Date<input id="" type="text" placeholder="" required></label>
+       <input id="" type="hidden" name="patient_id" value="<%= patient.id %>">
+        <label for="">Record Title<input id="" type="text" placeholder="" name="title" required></label>
+        <label for="">Description<input id="" type="text" placeholder="" name="description" required></label>
         <button>Submit</button>
     </form>
 </div>
