--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,9 +13,6 @@
         </form>
     </div>
     <div>
-      <form action="/patient/1/analyze" method="POST">
-        <button>Hit me</button>
-      </form>
       <h2>Patients</h2>
       <ul>          
         <li>
@@ -31,6 +28,9 @@
             <span><%= patient.first_name %></span> 
             </a>
           </li>
+          <form action="/patient/<%= patient.id %>/analyze" method="POST">
+            <button>Analyze</button>
+          </form>
         <% }) %>
       </ul>
   </div>
