--- a/views/pages/recordDetail.ejs
+++ b/views/pages/recordDetail.ejs
@@ -16,6 +16,7 @@
       <form method="POST" action="record/delete/<%= record.id %>">
         <input type="submit" value="Delete"/>
       </form>
+      <a href="/record/<%= patient_id %>">Back</a>
     </section>
   </main>
   <%- include('../partials/footer'); %>
