--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -90,6 +90,15 @@ footer {
   margin-right: 3px;
 }
 
+.under-form {
+  width: 85%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media (max-width: 991px) {
   header {
     padding: 0 20px;
