added new styles for the desktop

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -99,6 +99,26 @@ footer {
   align-items: center;
 }
 
+
+.floatedOr {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.centered-form {
+  flex-direction: column;
+}
+
+div.under-form h2 {
+  display: none;
+}
+
+div.under-form #patient-list {
+  display: none
+}
+
 @media (max-width: 991px) {
   header {
     padding: 0 20px;
@@ -131,6 +151,35 @@ footer {
   }
   header nav ul li ul li {
     width: 100%;
+  }
+}
+@media (min-width: 760px) {
+  main.site-content {
+    display: flex;
+    justify-content: center;
+    width: 60%;
+    margin: 0 auto;
+  }
+ 
+  div.form-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #myInput {
+    width: 60%;
+    height: 30px;
+    border: 1px solid #b3aca7;
+  }
+
+  .floatedOr {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 45px;
+    margin-bottom: 0px;
   }
 }
 
