--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,9 +18,9 @@
         </div>
       </form>
     </div>
-    
+    <span class="floatedOr"><h3>or</h3></span>
     <div class="under-form">
-      <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for patient names..">
+      <input type="text" id="myInput" class="input" onkeyup="myFunction()" placeholder="Search for patient names..">
       <h2>Patients</h2>
       <ul id="patient-list">
         <li>
