--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,6 +5,7 @@
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="../scripts/header.js"></script>
+  <script src="../scripts/main-page.js"></script>
   <link rel="stylesheet" href="/styles/base.css">
   <link rel="stylesheet" href="/styles/layout.css">
   <link rel="stylesheet" href="/styles/module.css">
