--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,6 +6,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="../scripts/header.js"></script>
   <script src="../scripts/main-page.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
   <link rel="stylesheet" href="/styles/base.css">
   <link rel="stylesheet" href="/styles/layout.css">
   <link rel="stylesheet" href="/styles/module.css">
