--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,8 @@
       </form>
     </div>
     <span class="floatedOr"><h3>or</h3></span>
+    <div class="input-header">
+    </div>
     <div class="under-form">
       <input type="text" id="myInput" class="input" onkeyup="myFunction()" placeholder="Search for patient names..">
       <h2>Patients</h2>
