--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -108,7 +108,6 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 30px;
 }
 
 .centered-form {
@@ -161,7 +160,7 @@ div.under-form #patient-list {
     width: 100%;
   }
 }
-@media (min-width: 760px) {
+@media (min-width: 1250px) {
 
   main.site-content {
     display: flex;
@@ -189,6 +188,12 @@ div.under-form #patient-list {
     justify-content: center;
     margin-left: 45px;
     margin-bottom: 0px;
+  }
+
+  .floated-title {
+    bottom: 432px;
+    position: absolute;
+    right: 300px;
   }
 }
 
