--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -31,6 +31,13 @@ input.input {
   background-color: white;
 }
 
+.floated-title {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+
 @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400);
 
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
