change page titles in head.ejs

--- a/views/pages/keyPhrases.ejs
+++ b/views/pages/keyPhrases.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('../partials/head'); %>
+<%- include('../partials/head', {title: 'Key Phrases'}); %>
 <body>
   <%- include('../partials/header'); %>\
   <h1>Key Phrases:</h1>
