--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -11,5 +11,5 @@
   <link rel="stylesheet" href="/styles/layout.css">
   <link rel="stylesheet" href="/styles/module.css">
   <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
-  <title>Document</title>
+  <title><%= title %></title>
 </head>
