--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('../partials/head'); %>
+  <%- include('../partials/head', {title: 'Error'}); %>
 <body>
   <%- include('../partials/header'); %>
   <main class="sticky-footer">
