--- a/views/pages/patient.ejs
+++ b/views/pages/patient.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/head'); %>
+<%- include('../partials/head', {title: 'Patient Detail'}); %>
 <%- include('../partials/header'); %>
 
 <% if (added) { %>
