--- a/views/pages/recordDetail.ejs
+++ b/views/pages/recordDetail.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('../partials/head'); %>
+  <%- include('../partials/head', {title: 'Record Detail'}); %>
 <body>
   <%- include('../partials/header'); %>
   <% if (added) { %>
