can add patient from index page again

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,8 @@
       </div>
       <form class="form" method="POST" action="/patient">
         <div class="inputs-form">
-          <p><input class="username input" type="text" placeholder="First Name" required></p>
-          <p><input class="lastname input" type="text" placeholder="Last Name" required></p>
+          <p><input class="username input" name="first_name" type="text" placeholder="First Name" required></p>
+          <p><input class="lastname input" name="last_name" type="text" placeholder="Last Name" required></p>
           <button class="submit">Submit</button>
         </div>
       </form>
