committing to pull from master

--- a/views/pages/patient.ejs
+++ b/views/pages/patient.ejs
@@ -27,7 +27,7 @@
     <form class=""  method="POST" action="/record">
        <input id="" type="hidden" name="patient_id" value="<%= patient.id %>">
         <label for="">Record Title<input id="" type="text" placeholder="" name="title" required></label>
-        <label for="">Description<input id="" type="text" placeholder="" name="description" required></label>
+        <label for="">Description<textarea id="" type="text" placeholder="" name="description" required></textarea></label>
         <button>Submit</button>
     </form>
 </div>
