--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,6 +1,7 @@
 body {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   background-color: #f1f1f1;
   font-family: 'Graduate', cursive;
 }
