--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header>
-  <div class="logo">MED <i class="watermellon fa fa-medkit"></i>
+  <a href="/patient"><div class="logo">MED <i class="watermellon fa fa-medkit"></i>
     WORDS
-  </div>
+  </div></a>
   <nav>
     <ul>
       <li><a href="/patient" class="active">home</a></li>
