--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -11,5 +11,6 @@
   <link rel="stylesheet" href="/styles/layout.css">
   <link rel="stylesheet" href="/styles/module.css">
   <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <title><%= title %></title>
 </head>
