delete extraneous / in keyphrases.ejs

--- a/views/pages/keyPhrases.ejs
+++ b/views/pages/keyPhrases.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <%- include('../partials/head', {title: 'Key Phrases'}); %>
 <body>
-  <%- include('../partials/header'); %>\
+  <%- include('../partials/header'); %>
   <h1>Key Phrases:</h1>
   <main>
       <ul>
