fix no records error display, add back button to error page

--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -4,8 +4,10 @@
 <body>
   <%- include('../partials/header'); %>
   <main class="sticky-footer">
-    <p><%= message %></p>      
+    <p><%= message %></p>     
+    <button id="back">Back</button> 
   </main>
+  <script src="../scripts/error.js"></script>
   <%- include('../partials/footer'); %>
 </body>
 </html>
