--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('partials/head', {title: 'Med Words'}); %>
+  <%- include('../partials/head', {title: 'Med Words'}); %>
   <body>
-    <%- include('partials/header'); %>
+    <%- include('../partials/header'); %>
 
 
-    <%- include('partials/footer'); %>
+    <%- include('../partials/footer'); %>
   </body>
 </html>
