--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
   <nav>
     <ul>
       <li><a href="/patient" class="active">home</a></li>
-      <li><a href="#">about us</a></li>
+      <li><a href="/about">about us</a></li>
     </ul>
   </nav>
   <div class="menu-toggle menu-toggle-one"><i class="fa fa-bars" aria-hidden="true"></i></div>
