--- a/views/pages/keyPhrases.ejs
+++ b/views/pages/keyPhrases.ejs
@@ -12,5 +12,6 @@
       </ul>
   </main>
   <a href="/patient/<%= patient_id %>">Back</a>
+  <%- include('../partials/footer'); %>
 </body>
 </html>
