--- a/views/pages/patient.ejs
+++ b/views/pages/patient.ejs
@@ -1,55 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
 <%- include('../partials/head', {title: 'Patient Detail'}); %>
-<%- include('../partials/header'); %>
+<body>
+    <%- include('../partials/header'); %>
 
-<% if (added) { %>
-    <p>Patient successfully added!</p>
-  
-<% } %>  <% if (deleted) { %>
-    <p>Record successfully deleted!</p>
-<% } %>
+    <% if (added) { %>
+        <p>Patient successfully added!</p>
+    
+    <% } %>  <% if (deleted) { %>
+        <p>Record successfully deleted!</p>
+    <% } %>
 
-<div class="">
-    <h2>Patient Details:</h2>
-    <p><%= patient.last_name %>, <%= patient.first_name %></p>
-</div>
+    <div class="">
+        <h2>Patient Details:</h2>
+        <p><%= patient.last_name %>, <%= patient.first_name %></p>
+    </div>
 
-<div class="">
-    <form class="" method="POST" action="/patient/<%= patient.id %>/analyze">
-        <button>Analyze Keywords</button>
-    </form>
-    <form id="delete" action="/patient/<%= patient.id %>" method="POST" >
-        <input type="hidden" name="_method" value="DELETE">
-        <button>Delete Patient</button>
-    </form>
-</div>
-<div>
-    <h2>Add A New Patient Record</h2>
-    <form class=""  method="POST" action="/record">
-       <input id="" type="hidden" name="patient_id" value="<%= patient.id %>">
-        <label for="">Record Title<input id="" type="text" placeholder="" name="title" required></label>
-        <label for="">Description<textarea id="" type="text" placeholder="" name="description" required></textarea></label>
-        <button>Submit</button>
-    </form>
-</div>
+    <div class="">
+        <form class="" method="POST" action="/patient/<%= patient.id %>/analyze">
+            <button>Analyze Keywords</button>
+        </form>
+        <form id="delete" action="/patient/<%= patient.id %>" method="POST" >
+            <input type="hidden" name="_method" value="DELETE">
+            <button>Delete Patient</button>
+        </form>
+    </div>
+    <div>
+        <h2>Add A New Patient Record</h2>
+        <form class=""  method="POST" action="/record">
+        <input id="" type="hidden" name="patient_id" value="<%= patient.id %>">
+            <label for="">Record Title<input id="" type="text" placeholder="" name="title" required></label>
+            <label for="">Description<textarea id="" type="text" placeholder="" name="description" required></textarea></label>
+            <button>Submit</button>
+        </form>
+    </div>
 
-<div>
-    <h2>Patient's Records</h2>
-    <ul>
-        <li>
-            <span>DATE</span>
-            <span>TITLE</span>
-        </li>
-        <% records.forEach( record => {  %>
+    <div>
+        <h2>Patient's Records</h2>
+        <ul>
             <li>
-                <a href="/record/<%= patient.id %>/<%= record.id %>">
-                <span><%= record.date %></span>
-                <span><%= record.title %></span>
-                </a>
+                <span>DATE</span>
+                <span>TITLE</span>
             </li>
-        <% }) %>
-    </ul>
-</div>
+            <% records.forEach( record => {  %>
+                <li>
+                    <a href="/record/<%= patient.id %>/<%= record.id %>">
+                    <span><%= record.date %></span>
+                    <span><%= record.title %></span>
+                    </a>
+                </li>
+            <% }) %>
+        </ul>
+    </div>
 
-<script src="../scripts/patient.js"></script>
-
-<%- include('../partials/footer'); %>
+    <script src="../scripts/patient.js"></script>
+    <%- include('../partials/footer'); %>
+</body>
+</html>
