Added some temp classes and simple team summary

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -4,7 +4,15 @@
   <body>
     <%- include('../partials/header'); %>
 
+    <main class="site-content">
+      <div class="page-header">
+        <h2>About Us</h2>
+      </div>
+      <p>We are a diverse team of developers with a huge passion in the world of programming. As we all come together as one, the different backgrounds and experiences that each member brings not only gives interesting insights into our project, but also cool ideas that we might've not come up by ourselves.</p>
 
+      <p></p>
+
+    </main>
     <%- include('../partials/footer'); %>
   </body>
 </html>
