--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,11 +1,13 @@
 body {
+  margin: 0;
+  padding: 0;
   display: flex;
+  min-height: 100vh;
   flex-direction: column;
   justify-content: space-between;
   background-color: #f1f1f1;
   font-family: 'Roboto', sans-serif;
 }
-
 
 html, body {
   height: 100%;
@@ -14,7 +16,174 @@ html, body {
 header {
   background-color: #2C3539;
   font-family: 'Graduate', cursive;
+  margin-bottom: 20px;
 }
+
+header .logo   {
+  color: #fff;
+  height: 50px;
+  line-height: 50px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+header nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+header nav ul li {
+  list-style: none;
+}
+
+
+header nav ul li .sub-menu:before {
+  content: "\f0d7";
+  font-family: fontAwesome;
+  line-height: 50px;
+  color: #fff;
+  right: 5px;
+}
+
+header nav ul li.active .sub-menu:before {
+  content: "\f0d8";
+}
+
+header nav ul li ul li {
+  width: 200px;
+}
+
+
+header nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  padding: 0 20px;
+  height: 50px;
+  line-height: 50px;
+  display: block;
+}
+
+header nav ul li a:hover,
+header nav ul li a.active {
+  color: #fff;
+  background: #E80000;
+}
+
+/* @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400);
+
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  color: #aca49c;
+  font-size: 0.875em;
+}
+
+input:focus::-webkit-input-placeholder, textarea:focus::-webkit-input-placeholder {
+  color: #bbb5af;
+}
+
+input::-moz-placeholder, textarea::-moz-placeholder {
+  color: #aca49c;
+  font-size: 0.875em;
+}
+
+input:focus::-moz-placeholder, textarea:focus::-moz-placeholder {
+  color: #bbb5af;
+}
+
+input::placeholder, textarea::placeholder {
+  color: #aca49c;
+  font-size: 0.875em;
+}
+
+input:focus::placeholder, textarea::focus:placeholder {
+  color: #bbb5af;
+}
+
+input::-ms-placeholder, textarea::-ms-placeholder {
+  color: #aca49c;
+  font-size: 0.875em;
+}
+
+input:focus::-ms-placeholder, textarea:focus::-ms-placeholder {
+  color: #bbb5af;
+}
+
+/* on hover placeholder */
+
+input:hover::-webkit-input-placeholder, textarea:hover::-webkit-input-placeholder {
+  color: #e2dedb;
+  font-size: 0.875em;
+}
+
+input:hover:focus::-webkit-input-placeholder, textarea:hover:focus::-webkit-input-placeholder {
+  color: #cbc6c1;
+}
+
+input:hover::-moz-placeholder, textarea:hover::-moz-placeholder {
+  color: #e2dedb;
+  font-size: 0.875em;
+}
+
+input:hover:focus::-moz-placeholder, textarea:hover:focus::-moz-placeholder {
+  color: #cbc6c1;
+}
+
+input:hover::placeholder, textarea:hover::placeholder {
+  color: #e2dedb;
+  font-size: 0.875em;
+}
+
+input:hover:focus::placeholder, textarea:hover:focus::placeholder {
+  color: #cbc6c1;
+}
+
+input:hover::placeholder, textarea:hover::placeholder {
+  color: #e2dedb;
+  font-size: 0.875em;
+}
+
+input:hover:focus::-ms-placeholder, textarea:hover::focus:-ms-placeholder {
+  color: #cbc6c1;
+}
+
+.inputs-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* form css */
+
+.form {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+ .input {
+  font-family: 'Lato', sans-serif;
+  font-size: 0.875em;
+  width: 250px;
+  height: 50px;
+  padding: 0px 15px 0px 15px;
+  
+  background: transparent;
+  outline: none;
+  color: #726659;
+  
+  border: solid 1px #b3aca7;
+  
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out; */
+}
+
+.input:hover {
+  background: #b3aca7;
+  color: #e2dedb;
+}
+
+/* social icons */
 
 #lab_social_icon_footer a {
   color: #f1f1f1;
@@ -107,4 +276,8 @@ header {
 footer {
   flex-shrink: 0;
   font-family: 'Graduate', cursive;
+  width: 100%;
+  background-color: #2C3539;
+  height: 50px;
+  color:  #fff;
 }
