--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,19 +1,10 @@
 body {
-  margin: 0;
-  padding: 0;
-}
-
-header {
-  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 header .logo {
-  color: #fff;
-  height: 50px;
-  line-height: 50px;
-  font-size: 24px;
   float: left;
-  font-weight: bold;
 }
 
 header nav {
@@ -22,45 +13,16 @@ header nav {
 
 header nav ul {
   display: flex;
-  margin: 0;
-  padding: 0;
 }
 
 header nav ul li {
-  list-style: none;
   position: relative;
 }
 
 header nav ul li .sub-menu:before {
-  content: "\f0d7";
   position: absolute;
-  font-family: fontAwesome;
-  line-height: 50px;
-  color: #fff;
-  right: 5px;
 }
 
-header nav ul li.active .sub-menu:before {
-  content: "\f0d8";
-}
-
-header nav ul li ul li {
-  display: block;
-  width: 200px;
-}
-header nav ul li a {
-  color: #fff;
-  text-decoration: none;
-  padding: 0 20px;
-  height: 50px;
-  line-height: 50px;
-  display: block;
-}
-header nav ul li a:hover,
-header nav ul li a.active {
-  color: #fff;
-  background: #E80000;
-}
 .menu-toggle {
   color: #fff;
   float: right;
@@ -78,10 +40,6 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  background-color: #2C3539;
-  height: 50px;
-  color:  #fff;
 }
 
 .footer-logo {
