Added problem domain summary

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -10,7 +10,11 @@
       </div>
       <p>We are a diverse team of developers with a huge passion in the world of programming. As we all come together as one, the different backgrounds and experiences that each member brings not only gives interesting insights into our project, but also cool ideas that we might've not come up by ourselves.</p>
 
-      <p></p>
+      <p>we r ravenclaw</p>
+
+      <p>We wanted to tackle the problem with patients transferring from one Primary Care Provider (PCP) to another. The traditional process is usually tedious and time consuming with file transfer requests and the new PCP needing to go through their patient's file thoroughly for the first time. An alternative was to do a re-diagnoses, which is consuming to resources and time for both parties.</p>
+
+      <p>This app is a proof of concept/prototype of an idea of being able to collect data from all previous records of a patient by using Microsoft's text analysis API to cherry pick key words from all records. This way, the PCP will then be able to have a quick 'at a glance' view of their patient's history.</p>
 
     </main>
     <%- include('../partials/footer'); %>
