--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -232,19 +232,14 @@ input:hover:focus::-ms-placeholder, textarea:hover::focus:-ms-placeholder {
   color: #f39c12;
 }
 
-#myInput {
-  width: 90%; /* Full-width */
-  font-size: 16px; /* Increase font-size */
-  padding: 12px 20px 12px 40px; /* Add some padding */
-  border: 1px solid #ddd; /* Add a grey border */
-  margin-bottom: 12px; /* Add some space below the input */
-}
-
 #patient-list {
   /* Remove default list styling */
   list-style-type: none;
   padding: 0;
   margin: 0;
+  height: 400px;
+  margin-bottom: 50px;
+  background-color: #f6f6f6; 
 }
 
 #patient-list li a {
