--- a/views/pages/patient.ejs
+++ b/views/pages/patient.ejs
@@ -53,7 +53,7 @@
         </ul>
     </div>
 
-    <script src="../scripts/patient.js"></script>
+    <script src="/scripts/delete.js"></script>
     <%- include('../partials/footer'); %>
 </body>
 </html>
