--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,13 +5,7 @@
 <body>
   <%- include('partials/header'); %>
   <main class="site-content">
-
-    <div>
-      <a href="#add-patient">Add a New Patient</a>
-      <a href="#search-patient">Search for an Existing</a>
-    </div>
-
-    <div id="add-patient" class="form-container">
+    <div id="add-patient" class="form-container index-div-height">
       <div class="page-header">
         <h2>Add A New Patient</h2>
       </div>
