--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -85,11 +85,17 @@ i.watermellon {
   color: #E80000; 
 }
 
+.detail-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .input {
   background-color: white;
   font-family: Lato, sans-serif;
   font-size: 0.875em;
-  width: 250px;
+  width: 400px;
   height: 50px;
   color: rgb(114, 102, 89);
   padding: 0px 15px;
