--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -86,6 +86,53 @@ div.under-form h2 {
   position: none;
 }
 
+/* demonstration css */
+.patient-detail-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+div.two {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.one form {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: 0 auto;
+}
+
+input #patient-id {
+  width: 80%;
+}
+
+.record-title {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+#textarea {
+  padding: 10px;
+  width: 100%;
+}
+
+.center {
+  text-align: center;
+}
+
+.one-form {
+  margin: 0 auto;
+}
+
+#textarea {
+  width: 90%;
+  height: 200px;
+}
+
 @media (max-width: 991px) {
   header {
     padding: 0 20px;
