--- a/views/pages/patient.ejs
+++ b/views/pages/patient.ejs
@@ -1,65 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include('../partials/head', {title: 'Patient Detail'}); %>
+
 <body>
-    <%- include('../partials/header'); %>
+	<%- include('../partials/header'); %>
 
-    <% if (added) { %>
-        <p>Patient successfully added!</p>
-    
-    <% } %>  <% if (deleted) { %>
-        <p>Record successfully deleted!</p>
-    <% } %>
-    <div class="detail-container">
-        <div class="">
-            <h2>Patient Details:</h2>
-            <p><%= patient.last_name %>, <%= patient.first_name %></p>
-        </div>
-        
-        <div class="">
-            <form class="" method="POST" action="/patient/<%= patient.id %>/analyze">
-                <input type="hidden" name="lastName" value="<%= patient.last_name %>">
-                <input type="hidden" name="firstName" value="<%= patient.first_name %>">
-                <button>Analyze Keywords</button>
-            </form>
-            <form id="delete" action="/patient/<%= patient.id %>" method="POST" >
-                <input type="hidden" name="_method" value="DELETE">
-                <button>Delete Patient</button>
-            </form>
-        </div>
-    </div>
-        
-<div>
-    <h2>Add A New Patient Record</h2>
-    <form class=""  method="POST" action="/record">
-       <input id="" type="hidden" name="patient_id" value="<%= patient.id %>">
-        <label for="">Record Title<input id="" type="text" placeholder="" name="title" required></label>
-        <label for="">Description<textarea id="" placeholder="" name="description" required></textarea></label>
-        <button>Submit</button>
-    </form>
-</div>
+	<% if (added) { %>
+	<p>Patient successfully added!</p>
 
-    <div>
-        <h2>Patient's Records</h2>
-        <p class="search-patient-label">
-            <span>DATE</span>
-            <span>TITLE</span>
-        </p>
-        <ul id="patient-list">
-            <% records.forEach( record => {  %>
-                <li>
-                    <a href="/record/<%= patient.id %>/<%= record.id %>">
-                    <p class="search-patient-label">
-                        <span><%= record.date %></span>
-                        <span><%= record.title %></span>
-                    </p>
-                    </a>
-                </li>
-            <% }) %>
-        </ul>
-    </div>
+	<% } %>
+	<% if (deleted) { %>
+	<p>Record successfully deleted!</p>
+	<% } %>
 
-    <script src="/scripts/delete.js"></script>
-    <%- include('../partials/footer'); %>
+	<div class="patient-container">
+		<div class="patient-detail-container">
+			<div class="one">
+				<h2>Patient Details:</h2>
+				<p>
+					<%= patient.last_name %>,
+					<%= patient.first_name %>
+				</p>
+			</div>
+			<div class="two">
+				<form class="analyze-form" method="POST" action="/patient/<%= patient.id %>/analyze">
+					<input type="hidden" name="lastName" value="<%= patient.last_name %>">
+					<input type="hidden" name="firstName" value="<%= patient.first_name %>">
+					<button class="submit">Analyze Keywords</button>
+				</form>
+			</div>
+		</div>
+		
+		<h2 class="center">Add A New Patient Record</h2>
+		<div class="new-record-container">
+			<div class="one one-form">
+				<form class="" method="POST" action="/record">
+					<input class="input" type="hidden" name="patient_id" value="<%= patient.id %>">
+					<input class="input record-title"	 type="text" placeholder="Record Title" name="title" required>
+					<textarea id="textarea" class="input"placeholder="Description" name="description" required></textarea>
+					<button class="submit">Submit</button>
+				</form>
+				<form id="delete" action="/patient/<%= patient.id %>" method="POST">
+					<input type="hidden" name="_method" value="DELETE">
+					<button class="submit">Delete Patient</button>
+				</form>
+			</div>
+			<!-- <div class="two">
+			</div> -->
+		</div>
+
+		<h2 class="center">Patient's Records</h2>
+		<div class="patient-records-cotainer">
+			<p class="search-patient-label">
+				<span>DATE</span>
+				<span>TITLE</span>
+			</p>
+			<ul id="patient-list">
+				<% records.forEach( record => {  %>
+				<li>
+					<a href="/record/<%= patient.id %>/<%= record.id %>">
+						<p class="search-patient-label">
+							<span>
+								<%= record.date %></span>
+							<span>
+								<%= record.title %></span>
+						</p>
+					</a>
+				</li>
+				<% }) %>
+			</ul>
+		</div>
+	</div>
+	<script src="/scripts/delete.js"></script>
+	<%- include('../partials/footer'); %>
 </body>
+
 </html>
