--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -6,16 +6,22 @@
 
     <main class="site-content">
       <div class="page-header">
+        <h2>Med Words</h2>
+      </div>
+      <p>This app is a proof of concept/prototype. The development team wanted to work with one of Microsoft's APIs with a focus on health care, so we brainstormed a project that combines the two. 
+
+      <p>Our medical histories are increasingly pieced together from records created by different providers at different clinics and hospitals. Parsing a patient's medical history from such long, motley charts is time consuming; clinicians may not have the time to thoroughly 'read' a patient's history unless diagnosis or treatment necessitates complete perusal. Moreover, when searching a patient's chart for specific terms like "hypertension" or "hypercholesterolemmia", the clinician is only presented with records that match those terms.</p>
+
+      <p>  
+      We envisioned another way of reading a patient's history by analyzing a patient's chart (comprised of individual records) for key phrases. Med Words presents those key phrases to clinicians in a condensed format so that a new PCP can see major themes in a patient's history at a glance.
+      </p>
+      
+      <p>We wanted to tackle the problem with patients transferring from one Primary Care Provider (PCP) to another. The traditional process is usually tedious and time consuming with file transfer requests and the new PCP needing to go through their patient's file thoroughly for the first time. An alternative was to do a re-diagnoses, which is consuming to resources and time for both parties.</p>
+
+      <div class="page-header">
         <h2>About Us</h2>
       </div>
       <p>We are a diverse team of developers with a huge passion in the world of programming. As we all come together as one, the different backgrounds and experiences that each member brings not only gives interesting insights into our project, but also cool ideas that we might've not come up by ourselves.</p>
-
-      <p>we r ravenclaw</p>
-
-      <p>We wanted to tackle the problem with patients transferring from one Primary Care Provider (PCP) to another. The traditional process is usually tedious and time consuming with file transfer requests and the new PCP needing to go through their patient's file thoroughly for the first time. An alternative was to do a re-diagnoses, which is consuming to resources and time for both parties.</p>
-
-      <p>This app is a proof of concept/prototype of an idea of being able to collect data from all previous records of a patient by using Microsoft's text analysis API to cherry pick key words from all records. This way, the PCP will then be able to have a quick 'at a glance' view of their patient's history.</p>
-
     </main>
     <%- include('../partials/footer'); %>
   </body>
