--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -89,7 +89,10 @@ div.under-form h2 {
 /* demonstration css */
 .patient-detail-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-left: 67px;
+  margin-right: 160px;
 }
 
 div.two {
@@ -97,6 +100,11 @@ div.two {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+}
+
+#delete {
+  position: relative;
+  left: 250px;top: -57px;
 }
 
 .one form {
@@ -129,8 +137,9 @@ input #patient-id {
 }
 
 #textarea {
-  width: 90%;
+  width: 100%;
   height: 200px;
+  margin-bottom: 15px;
 }
 
 @media (max-width: 991px) {
@@ -173,19 +182,26 @@ input #patient-id {
     width: 100%;
   }
 }
-@media (min-width: 1250px) {
+@media (min-width: 760px) {
 
+  .patient-detail-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-left: 67px;
+    margin-right: 45px;
+  }
+
+  div.patient-records-container {
+    width: 90%;
+    margin: 0 auto;
+  }
+  
   main.site-content {
     width: 60%;
     margin: 0 auto;
   }
-  
-  div.form-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+
 
   #myInput {
     width: 91%;
