add pics and linkedin

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -20,6 +20,21 @@
         <h2>About Us</h2>
       </div>
       <p>We are a diverse team of developers with a huge passion in the world of programming. As we all come together as one, the different backgrounds and experiences that each member brings not only gives interesting insights into our project, but also cool ideas that we might've not come up by ourselves.</p>
+
+      <section id="about-us">
+        <h3><a href="https://www.linkedin.com/in/earnest-cain-5235b311a/">Tre Cain</a></h3>
+        <img src="/assets/tre.jpeg">
+
+        <h3><a href="https://www.linkedin.com/in/kendra-ellis/">Kendra Ellis</a></h3>
+        <img src="/assets/kendra.jpg">
+
+        <h3><a href="https://www.linkedin.com/in/aaron-frank/">Aaron Frank</a></h3>
+        <img src="/assets/aaron.jpg">
+
+        <h3><a href="https://www.linkedin.com/in/jeffreyhweng/">Jeff Weng</a></h3>
+        <img src="/assets/jeff.jpg">
+      </section>
+
     </main>
     <%- include('../partials/footer'); %>
   </body>
