--- a/views/pages/recordDetail.ejs
+++ b/views/pages/recordDetail.ejs
@@ -3,6 +3,7 @@
   <%- include('../partials/head', {title: 'Record Detail'}); %>
 <body>
   <%- include('../partials/header'); %>
+  <a class="submit back" href="/patient/<%= patient_id %>">← Back</a>
   <% if (added) { %>
     <p>Record successfully added!</p>
   <% } %>
@@ -16,9 +17,8 @@
         <form id="delete" action="/record/<%= record.id %>" method="POST" >
           <input type="hidden" name="_method" value="DELETE">
           <input type="hidden" name="patientId" value="<%= patient_id %>">
-          <button>Delete</button>
+          <button class="submit">Delete</button>
       </form>
-      <a href="/patient/<%= patient_id %>">Back</a>
     </section>
   </main>
   <%- include('../partials/footer'); %>
